# 42-a-maze-ing

./: .gitignore  LICENSE.md  Makefile  README.md  justfile  output_maze.txt  pyproject.toml
docs/: DIVISION.md  LICENSE
src/: a_maze_ing.py  config.txt  mazegen.py  output_maze.txt  visual.py  visualisation.py
tests/: demo-mazegen.py  test_mazegen.py
