[project]
name = "42-a-maze-ing"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy",
    "ruff",
]

[tool.ruff]
line-length = 79
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
files = ["src"]
