[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mazegen"
version = "1.0.0"
requires-python = ">=3.11"

[tool.hatch.build.targets.wheel]
only-include = ["src/mazegen.py"]
sources = ["src"]


[tool.hatch.build.targets.sdist]
only-include = ["src/mazegen.py", "pyproject.toml"]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "hypothesis"
]

# [tool.pytest.ini_options]
# pythonpath = ["src"]

# [tool.pyright]
# extraPaths = ["src"]

[tool.ruff]
line-length = 79
# src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
# files = ["src"]

